--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <button onclick="switchTab('mahasiswa')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Mahasiswa</button>
                 <button onclick="switchTab('jadwal')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Jadwal</button>
                 <button onclick="switchTab('simulasi')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Simulasi IPK</button>
-                <button onclick="switchTab('links')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Tautan & Sosmed</button>
+                <button onclick="switchTab('layanan terpadu')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Tautan & Sosmed</button>
             </div>
         </div>
     </nav>
@@ -180,7 +180,7 @@
 
                 <div class="relative z-10 max-w-4xl mx-auto space-y-6">
                     <div class="inline-block px-4 py-1 rounded-full border border-tipYellow/50 bg-tipYellow/10 text-tipYellow text-sm font-semibold tracking-wide mb-4 animate-pulse">
-                        PENERIMAAN MAHASISWA BARU 2025
+                        DIKELOLA OLEH AGRONITY25
                     </div>
                     <h1 class="text-5xl md:text-7xl font-extrabold text-white tracking-tight">
                         MEMBANGUN <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-yellow-600 text-glow">AGROINDUSTRI</span><br> MASA DEPAN
@@ -190,7 +190,7 @@
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center mt-8">
                         <button onclick="switchTab('mengenal')" class="px-8 py-3 rounded-xl bg-tipYellow text-black font-bold text-lg hover:bg-yellow-400 hover:shadow-[0_0_20px_rgba(234,179,8,0.6)] transition-all transform hover:-translate-y-1">
-                            Jelajahi TIP
+                            Jelajahi TIP ULM
                         </button>
                         <a href="http://pmb.ulm.ac.id" target="_blank" class="px-8 py-3 rounded-xl glass-panel text-white font-bold text-lg hover:bg-white/10 hover:border-tipYellow transition-all transform hover:-translate-y-1 flex items-center justify-center gap-2">
                             Daftar Sekarang <i class="fa-solid fa-arrow-right"></i>
@@ -249,7 +249,7 @@
                                     </tr>
                                     <tr>
                                         <td class="px-4 py-3">Internasional</td>
-                                        <td class="px-4 py-3 font-bold text-blue-400">Full Accredited</td>
+                                        <td class="px-4 py-3 font-bold text-blue-400">ASIIN Accredited</td>
                                         <td class="px-4 py-3">ASIIN (Jerman)</td>
                                     </tr>
                                 </tbody>
@@ -542,7 +542,7 @@
                         <div class="text-sm text-gray-500 uppercase tracking-widest mb-4">Indeks Prestasi Kumulatif</div>
                         
                         <div class="glass-panel p-4 rounded-xl border-l-4 border-red-500 bg-red-900/10">
-                            <h4 class="text-red-400 font-bold mb-1">ROASTING AI:</h4>
+                            <h4 class="text-red-400 font-bold mb-1">APA KATA:</h4>
                             <p id="roastMessage" class="text-gray-300 italic">"..."</p>
                         </div>
                     </div>
@@ -809,7 +809,7 @@
             } else if (ipk >= 2.00) {
                 roastMsg.innerText = "Hati-hati pinggir jurang! Dikit lagi DO melambai-lambai.";
             } else {
-                roastMsg.innerText = "BEBAN KELUARGA DETECTED. Silakan login ulang kehidupan atau pindah jurusan.";
+                roastMsg.innerText = "DONATUR KAMPUS DETECTED. Silakan login ulang kehidupan atau pindah jurusan.";
             }
         }
 
