--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <button onclick="switchTab('mahasiswa')" class="nav-btn px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5 transition-all">Mahasiswa</button>
                         <button onclick="switchTab('jadwal')" class="nav-btn px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5 transition-all">Jadwal</button>
                         <button onclick="switchTab('simulasi')" class="nav-btn px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5 transition-all">Simulasi IPK</button>
-                        <button onclick="switchTab('links')" class="nav-btn px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5 transition-all">Tautan</button>
+                        <button onclick="switchTab('links')" class="nav-btn px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5 transition-all">Layanan Agronity</button>
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
                 <button onclick="switchTab('mahasiswa')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Mahasiswa</button>
                 <button onclick="switchTab('jadwal')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Jadwal</button>
                 <button onclick="switchTab('simulasi')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Simulasi IPK</button>
-                <button onclick="switchTab('layanan terpadu')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Tautan & Sosmed</button>
+                <button onclick="switchTab('links')" class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-tipYellow hover:bg-white/5">Layanan Agronity</button>
             </div>
         </div>
     </nav>
