Update course room for Wednesday schedule

--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                         day: "Rabu",
                         color: "green",
                         courses: [
-                            { time: "14:40 - 16:20", name: "Pengantar Lingkungan Lahan Basah", room: "Ruang PAMPAKEN (2 SKS)" },
+                            { time: "14:40 - 16:20", name: "Pengantar Lingkungan Lahan Basah", room: "Ruang KEMUNING (2 SKS)" },
                             { time: "16:20 - 18:00", name: "Metode Statistika (Lanjutan)", room: "Ruang PAMPAKEN" }
                         ]
                     },
