--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
        <section id="beranda" class="tab-content active">
            <div class="relative rounded-3xl overflow-hidden glass-panel h-[80vh] flex items-center justify-center text-center p-6 border-tipYellow/50 shadow-[0_0_50px_rgba(234,179,8,0.1)]">
                <div class="absolute inset-0 z-0">
-                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDZBkrnCepY9MtvisRlcfUWMXWHWdpv4GPIw&s" class="w-full h-full object-cover opacity-30" alt="Agriculture Tech">
+                   <img src="https://image2url.com/r2/default/images/1770952078547-727f18b1-0d3e-4829-8283-b21986d79eb7.jpeg" class="w-full h-full object-cover opacity-30" alt="Agriculture Tech">
                    <div class="absolute inset-0 bg-gradient-to-t from-tipBlack via-tipBlack/80 to-transparent"></div>
                </div>
 
