--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                     
                     <div class="absolute top-4 right-4">
                         <span class="bg-green-600/80 backdrop-blur-md text-white text-[10px] font-bold px-3 py-1 rounded-full border border-green-400/30 shadow-[0_0_10px_rgba(34,197,94,0.5)] animate-pulse">
-                            <i class="fa-solid fa-flask"></i> PKM-RE 2025
+                            <i class="fa-solid fa-flask"></i> PKM-RE 2026
                         </span>
                     </div>
 
@@ -861,7 +861,7 @@
 
                 <!-- 5. FARIS -->
                 <div onclick="openApresiasiModal('faris')" class="group relative aspect-[4/5] rounded-3xl overflow-hidden cursor-pointer shadow-lg hover:shadow-2xl transition-all duration-500 ring-1 ring-white/10 hover:ring-teal-500/50">
-                    <img src="https://image2url.com/r2/default/images/1771146551161-7e238393-2ebe-4e2b-8fae-0c12370c30b7.jpg" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Faris Photo">
+                    <img src="https://image2url.com/r2/default/images/1771152055207-8054e669-6067-4708-ae56-2540b042415f.jpeg" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Faris Photo">
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-90 group-hover:opacity-70 transition-opacity"></div>
                     
                     <div class="absolute top-4 right-4">
