--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
                 <div class="glass-panel p-6 rounded-2xl text-center hover:scale-105 transition-transform duration-300">
-                    <div class="text-4xl font-bold text-tipYellow mb-2">UNGGUL</div>
+                    <div class="text-4xl font-bold text-tipYellow mb-2">A</div>
                     <p class="text-gray-400">Akreditasi Nasional BAN-PT</p>
                 </div>
                 <div class="glass-panel p-6 rounded-2xl text-center hover:scale-105 transition-transform duration-300">
@@ -924,7 +924,7 @@
                                 <tbody class="divide-y divide-gray-700">
                                     <tr>
                                         <td class="px-4 py-3">Nasional</td>
-                                        <td class="px-4 py-3 font-bold text-green-400">UNGGUL</td>
+                                        <td class="px-4 py-3 font-bold text-green-400">A</td>
                                         <td class="px-4 py-3">BAN-PT</td>
                                     </tr>
                                     <tr>
