Update Azwar image URL in index.html

--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
 
                 <!-- 4. AZWAR -->
                 <div onclick="openApresiasiModal('azwar')" class="group relative aspect-[4/5] rounded-3xl overflow-hidden cursor-pointer shadow-lg hover:shadow-2xl transition-all duration-500 ring-1 ring-white/10 hover:ring-purple-500/50">
-                    <img src="https://image2url.com/r2/default/images/1771146637070-fe588872-0942-48e2-b3cd-c60c0ff85c2c.jpg" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Azwar Photo">
+                    <img src="https://image2url.com/r2/default/images/1771201595091-b7a7a3ef-98c8-468c-b3f4-c1e4dd86328e.jpeg" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Azwar Photo">
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-90 group-hover:opacity-70 transition-opacity"></div>
                     
                     <div class="absolute top-4 right-4">
