Update navigation bar to use logo image
Replaced icon with logo image in navigation bar.

--- a/index.html
+++ b/index.html
@@ -559,7 +559,13 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex-shrink-0 flex items-center gap-3 cursor-pointer" onclick="switchTab('beranda')">
-                    <i class="fa-solid fa-wheat-awn text-tipYellow text-3xl animate-pulse"></i>
+                    
+                    <!-- BAGIAN INI TELAH DIUBAH DARI ICON MENJADI GAMBAR -->
+                    <!-- Ganti link (src) di bawah ini dengan link gambar logo Anda -->
+                    <img src="https://image2url.com/r2/default/images/1771202156309-5a871b50-95dc-4ef2-930b-ed8f94f23541.png" 
+                         class="h-10 w-10 object-contain drop-shadow-[0_0_5px_rgba(234,179,8,0.8)]" 
+                         alt="Logo Agronity">
+
                     <div>
                         <h1 class="font-bold text-xl tracking-wider text-white">AGRONITY <span class="text-tipYellow text-glow">25</span></h1>
                         <p class="text-[10px] text-gray-400 tracking-[0.2em]">TEKNOLOGI INDUSTRI PERTANIAN</p>
